Fixed spacing problems with outcome div

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -62,25 +62,28 @@ body {
 #game-outcome {
     font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
     font-size: 30pt;
-    margin: auto;
+    /* margin: auto; */
     height: 1%;
-    width: 70%;
-    text-align: center;
+    /* width: 70%; */
+    /* text-align: center; */
     float: left;
 }
 
 
 
 #outcome-box {
-    margin-left: 40%;
+    /* margin-left: 300px; */
+    width: 300px;
     opacity: 0.5;
+    float: left;
 }
 
  #win-lose {
-    margin-left: 55%;
-    width: 30%;
+    /* margin-left: 300px; */
+    width: 200px;
     color: crimson;
     opacity: 0.5;
+    float: left;
 } 
 
 button {
